done :raised_hands:

--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -28,7 +28,7 @@
                   <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total
                     <span class="block count">Weight Loss</span>
                   </h5>
-                  <h3 class="health-count text-left white text-bold">23494.12
+                  <h3 class="health-count text-left white text-bold">23494
                     <span class="font-primary">kgs</span>
                   </h3>
                 </div>
@@ -244,7 +244,7 @@
     </div>
   </div>
 
-  <div class="growth-section">
+  <div class="growth-section" style="display: none;">
     <div class="container">
       <h3 class="text-center text-uppercase font-semibold">Growth in the number of clients across the past decade:</h3>
 
