--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -927,7 +927,7 @@
                                 <!-- payment detail -->
                                 <div class="payment-detail" ng-show="goToNext">
                                   <h3 class="brand-primary">Payment Details</h3>
-                                    <form method="post" name="customerData" ng-hide="cod" action="http://admin.selfcareindia.com/paymentgateway/ccavRequestHandler.php">
+                                      <form method="post" name="customerData" ng-hide="cod" action="http://admin.selfcareindia.com/paymentgateway/ccavRequestHandler.php">
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <table>
@@ -940,7 +940,7 @@
                                                     <tr style="display:none">
                                                         <td>merchant_id :</td>
                                                         <td>
-                                                            <input type="text" name="merchant_id" `value`="14857" readonly/>
+                                                            <input type="text" name="merchant_id" value="14857" readonly/>
                                                         </td>
                                                     </tr>
                                                     <tr style="display:none">
@@ -966,7 +966,7 @@
                                                     <tr style="display:none">
                                                         <td>Redirect URL :</td>
                                                         <td>
-                                                            <input type="text" name="redirect_url" value="http://selfcareindia.com/selfcare/index.php/json/payumoneysuccess"/>
+                                                            <input type="text" name="redirect_url" value="http://admin.selfcareindia.com/index.php/json/payumoneysuccess"/>
                                                         </td>
                                                     </tr>
                                                     <tr style="display:none">
@@ -1141,7 +1141,7 @@
                                                             <tr style="display:none">
                                                                 <td>Redirect URL :</td>
                                                                 <td>
-                                                                    <input type="text" name="redirect_url" value="http://selfcareindia.com/selfcare/index.php/json/payumoneysuccess"/>
+                                                                    <input type="text" name="redirect_url" value="http://admin.selfcareindia.com/index.php/json/payumoneysuccess"/>
                                                                 </td>
                                                             </tr>
                                                             <tr style="display:none">
