--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -116,7 +116,7 @@
             </uib-accordion-group>
             <uib-accordion-group is-open="status.open2">
               <uib-accordion-heading>
-                Bmi Calculator<i class="open-me fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i>
+                BMI Calculator<i class="open-me fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i>
               </uib-accordion-heading>
               <div class="bmi-detail">
                 <div class="bmi-cal">
