--- a/views/header.html
+++ b/views/header.html
@@ -70,8 +70,8 @@
           <div class="contact-tel letter-space">
             <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
           </div>
-          <div class="cart-icon relate">
-            <a href="#/cart" ng-controller="countChange">
+          <div class="cart-icon relate" ng-controller="countChange">
+            <a href="#/cart" >
 
               <i class="fa fa-shopping-cart brand-primary"></i>
               <div class="bagde round">
