--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -83,7 +83,7 @@
 </div>
 <div class="cart-fixed brand-primary-bg">
   <div class="relate">
-    <a href="#/cart" ng-controller="countChange" class="ng-scope">
+    <a href="#/cart" ng-controller="countChangeInternal" class="ng-scope">
       <i class="fa fa-shopping-cart fa-2x white"></i>
       <div class="bagde round brand-primary-bg">
         <span class="white ng-binding">{{Count}}</span>
