calorie meter and COD

--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -1086,7 +1086,7 @@
                                         </div>
                                         <div class="place-order-btn ">
                                             <!-- <button class="btn btn-primary text-uppercase " type="submit">Place order</button> -->
-                                            <button class="btn btn-primary text-uppercase " type="submit" style="margin-right:50px;" disabled>Pay by cod</button>
+                                            <button class="btn btn-primary text-uppercase " type="button" ng-click="payByCOD()" style="margin-right:50px;" >Pay by cod</button>
                                             <button class="btn btn-primary text-uppercase " type="submit">pay online</button>
                                         </div>
                                     </div>
