--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -191,7 +191,7 @@
                         <div class="progress-bar over same-progressdata">
                           <span>OVERWEIGHT</span>
                         </div>
-                        <div class="progress-bar severly obese same-progressdata">
+                        <div class="progress-bar severly-obese obese same-progressdata">
                           <span>OBESE</span>
                         </div>
                       </div>
