--- a/sass/main.scss
+++ b/sass/main.scss
@@ -125,6 +125,9 @@ $instagram: #396d9a !default;
 .brand-primary-bg {
   background-color: $brand-primary;
 }
+.brand-primary-bg-gender {
+  background-color: $brand-primary !important;
+}
 .brand-primary-light-bg {
   background-color: $brand-primary-light;
 }
