--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -3,4 +3,25 @@
     <img src="img/banners/how.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">How It Works</h2>
   </div>
+    <div class="container">
+  <div class="row feelfabulous">
+    <div class="feelfit">
+      <h2 class="font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
+      <div class="col-md-6">
+        <div class="stairs text-center">
+          <figure>
+            <img src="img/works/stairs.png" alt="stairs">
+          </figure>
+        </div>
+        <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
+      </div>
+      <div class=" col-md-4">
+        <div class="packages text-center">
+          <h2 class=" about font-semibold">YOU CAN FIND OUT ABOUT<br>OUR HEALTH PACKAGES HERE</h2>
+          <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </section>
