--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -3,25 +3,50 @@
     <img src="img/banners/how.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">How It Works</h2>
   </div>
-    <div class="container">
-  <div class="row feelfabulous">
-    <div class="feelfit">
-      <h2 class="font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
-      <div class="col-md-6">
-        <div class="stairs text-center">
+  <div class="container">
+    <div class="invest">
+      <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/one.jpg"></span>invest in your health</h2>
+      <ul class="breadcrumb">
+        <li>
           <figure>
-            <img src="img/works/stairs.png" alt="stairs">
+            <img src="img/works/comp.png" alt="computer">
           </figure>
+          <h3>Sign up on our website</h3>
+        </li>
+        <li>
+          <figure>
+            <img src="img/works/heart.png" alt="computer">
+          </figure>
+          <h3>Choose a Health Plan</h3>
+          <p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
+        </li>
+        <li>
+          <figure>
+            <img src="img/works/hand.png" alt="computer">
+          </figure>
+          <h3>Join our Health Plan</h3>
+          <p>We accept mastercard or visa debit/ credit cards and bank/ wire transfer</p>
+        </li>
+      </ul>
+    </div>
+    <div class="row feelfabulous">
+      <div class="feelfit">
+        <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
+        <div class="col-md-6">
+          <div class="stairs text-center">
+            <figure>
+              <img src="img/works/stairs.png" alt="stairs">
+            </figure>
+          </div>
+          <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
         </div>
-        <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
-      </div>
-      <div class=" col-md-4">
-        <div class="packages text-center">
-          <h2 class=" about font-semibold">YOU CAN FIND OUT ABOUT<br>OUR HEALTH PACKAGES HERE</h2>
-          <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+        <div class=" col-md-4">
+          <div class="packages text-center">
+            <h2 class="about text-uppercase text-center text-bold  font-semibold">YOU CAN FIND OUT ABOUT <br>OUR HEALTH PACKAGES HERE</h2>
+            <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </section>
